--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,4 +1,10 @@
 <%- include('../partials/_navbar.ejs') %>
+  <link rel="stylesheet" href="/stylesheet/style.css">
+
+   <!-- <button onclick="window.location.href='auth/'">Go to Sign In</button> -->
+<div class="container">
+  <div class="button">
+
 <h1>Create a new account</h1>
 
 <form method="POST" action="/auth/sign-up">
@@ -17,6 +23,7 @@
 
   <br>
 
-  <button type="submit">Sign up</button>
+  <button type="submit">submit</button>
 
+  </div>
 </form>
