--- a/views/Book/new.ejs
+++ b/views/Book/new.ejs
@@ -1,11 +1,11 @@
   <%- include('../partials/_navbar.ejs') %>
   <link rel="stylesheet" href="/stylesheet/style.css" />
   
-   <div class="card">
-
+   <!-- <div class="card"> -->
+<!-- <div class="book-container">  -->
     <h1>Add a new Book</h1>
   <!-- <img src="img_avatar.png" alt="Avatar" style="width:100%"> -->
-  <div class="container">
+  <div class="book-container">
    
     <p>Book Details</p>
   </div>
