--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,15 +1,26 @@
-<%- include('../partials/_navbar.ejs') %>
-
-<h1>Sign In</h1>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/stylesheet/style.css">
+</head>
+<body>
+  <%- include('../partials/_navbar.ejs') %>
+<div class="container">
+  <div class="button">
+  <h1>Sign In</h1>
 <form action="/auth/sign-in" method="POST">
   <label for="username">Username</label>
   <input type="text" name="username" id="username">
   <br>
-
   <label for="password">Password</label>
   <input type="password" name="password" id="password">
   <br>
-
+<br>
   <button type="submit">Sign In</button>
+</div>
 </form>
+</body>
+</html>
