--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,13 @@
   <link rel="stylesheet" href="/stylesheet/style.css" />
 </head>
 <body>
-    <%- include('./partials/_navbar.ejs') %>
-    <h1>Welcome to the BookiPedia app</h1>
- 
+    
+   
+    <div class="container">
+    <div class="home-content"> 
+      <h1>Welcome to BookiPedia</h1>
+  
+  <button onclick="window.location.href='auth/sign-in'">Go to Sign In</button>
 </div>
 </body>
 </html>
